@@ -16,9 +16,8 @@
 
 package com.perl5.lang.perl.internals.warnings;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -26,8 +25,8 @@ import java.util.Map;
  */
 public class PerlWarningTree {
   public static final PerlWarningTreeNode TREE = new PerlWarningTreeNode(
-    5.008, "all", new ArrayList<>(Arrays.asList(
-    new PerlWarningTreeNode(5.008, "io", new ArrayList<>(Arrays.asList(
+    5.008, "all", List.of(
+    new PerlWarningTreeNode(5.008, "io", List.of(
       new PerlWarningTreeLeaf(5.008, "pipe"),
       new PerlWarningTreeLeaf(5.008, "unopened"),
       new PerlWarningTreeLeaf(5.008, "closed"),
@@ -36,9 +35,9 @@ public class PerlWarningTree {
       new PerlWarningTreeLeaf(5.008, "layer"),
 
       new PerlWarningTreeLeaf(5.019, "syscalls")
-    ))),
+    )),
 
-    new PerlWarningTreeNode(5.008, "syntax", new ArrayList<>(Arrays.asList(
+    new PerlWarningTreeNode(5.008, "syntax", List.of(
       new PerlWarningTreeLeaf(5.008, "ambiguous"),
       new PerlWarningTreeLeaf(5.008, "semicolon"),
       new PerlWarningTreeLeaf(5.008, "precedence"),
@@ -51,14 +50,14 @@ public class PerlWarningTree {
       new PerlWarningTreeLeaf(5.008, "qw"),
 
       new PerlWarningTreeLeaf(5.011, "illegalproto")
-    ))),
+    )),
 
-    new PerlWarningTreeNode(5.008, "severe", new ArrayList<>(Arrays.asList(
+    new PerlWarningTreeNode(5.008, "severe", List.of(
       new PerlWarningTreeLeaf(5.008, "inplace"),
       new PerlWarningTreeLeaf(5.008, "internal"),
       new PerlWarningTreeLeaf(5.008, "debugging"),
       new PerlWarningTreeLeaf(5.008, "malloc")
-    ))),
+    )),
 
     new PerlWarningTreeLeaf(5.008, "deprecated"),
     new PerlWarningTreeLeaf(5.008, "void"),
@@ -78,11 +77,11 @@ public class PerlWarningTree {
     new PerlWarningTreeLeaf(5.008, "overflow"),
     new PerlWarningTreeLeaf(5.008, "portable"),
 
-    new PerlWarningTreeNode(5.008, "utf8", new ArrayList<>(Arrays.asList(
+    new PerlWarningTreeNode(5.008, "utf8", List.of(
       new PerlWarningTreeLeaf(5.013, "surrogate"),
       new PerlWarningTreeLeaf(5.013, "nonchar"),
       new PerlWarningTreeLeaf(5.013, "non_unicode")
-    ))),
+    )),
 
     new PerlWarningTreeLeaf(5.008, "exiting"),
     new PerlWarningTreeLeaf(5.008, "pack"),
@@ -91,7 +90,7 @@ public class PerlWarningTree {
 
     new PerlWarningTreeLeaf(5.011, "imprecision"),
 
-    new PerlWarningTreeNode(5.017, "experimental", new ArrayList<>(Arrays.asList(
+    new PerlWarningTreeNode(5.017, "experimental", List.of(
       new PerlWarningTreeLeaf(5.017, "experimental::lexical_subs"),
       new PerlWarningTreeLeaf(5.017, "experimental::regex_sets"),
       new PerlWarningTreeLeaf(5.017, "experimental::lexical_topic"),
@@ -106,12 +105,12 @@ public class PerlWarningTree {
       new PerlWarningTreeLeaf(5.021, "experimental::re_strict"),
       new PerlWarningTreeLeaf(5.021, "experimental::const_attr"),
       new PerlWarningTreeLeaf(5.021, "experimental::bitwise")
-    ))),
+    )),
 
     new PerlWarningTreeLeaf(5.021, "missing"),
     new PerlWarningTreeLeaf(5.021, "redundant"),
     new PerlWarningTreeLeaf(5.021, "locale")
-  )));
+  ));
 
   public static final Map<String, PerlWarningTreeLeaf> LEAF_OPTIONS;
   public static final Map<String, PerlWarningTreeNode> NODE_OPTIONS;
