@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2019 Alexandr Evstigneev
+ * Copyright 2015-2023 Alexandr Evstigneev
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,13 +16,11 @@
 
 package com.perl5.lang.tt2;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 
 public interface TemplateToolkitFilterNames {
-  List<String> FILTER_NAMES = new ArrayList<>(Arrays.asList(
+  List<String> FILTER_NAMES = List.of(
     "format(format)",
     "upper",
     "lower",
@@ -52,5 +50,5 @@ public interface TemplateToolkitFilterNames {
     "stdout(options)",
     "stderr",
     "null"
-  ));
+  );
 }
